# flunder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/actions/setup-toolchain/: action.yml
.github/workflows/: build.yml  deploy.yml  develop.workflow.yml  pull-request.workflow.yml  release.workflow.yml  test.yml
cmake/toolchains/: amd64.cmake  arm64.cmake  armhf.cmake
examples/: flunder_client_example.c  flunder_client_example.cpp
include/flunder/: client.h  to_string.h  variable.h
include/flunder/impl/: client.h  to_bytes.h
pkg/: CMakeLists.txt
pkg/libflunder/: CMakeLists.txt  copyright
pkg/libflunder-dev/: CMakeLists.txt  copyright
src/: client.cpp  to_string.cpp  variable.cpp
src/impl/: client.cpp  to_bytes.cpp
test/: CMakeLists.txt  test_flunder.cpp
