# configure packages

set(CPACK_GENERATOR DEB TGZ)

SET(CPACK_DEB_COMPONENT_INSTALL 1)
SET(CPACK_ARCHIVE_COMPONENT_INSTALL 1)

set(CPACK_PACKAGE_NAME "libflunder")

set(CPACK_PACKAGE_ARCHITECTURE "${ARCH}")
set(CPACK_PACKAGE_CONTACT "FLECS Technologies GmbH <info@flecs.tech>")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "FLECS Unified Data Exchange and Retention")
set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")

set(CPACK_ARCHIVE_DEV_FILE_NAME ${CPACK_PACKAGE_NAME}-dev_${PROJECT_VERSION}_${CPACK_PACKAGE_ARCHITECTURE})
set(CPACK_ARCHIVE_RUNTIME_FILE_NAME ${CPACK_PACKAGE_NAME}_${PROJECT_VERSION}_${CPACK_PACKAGE_ARCHITECTURE})

set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "${CPACK_PACKAGE_ARCHITECTURE}")
set(CPACK_DEBIAN_RUNTIME_PACKAGE_NAME ${CPACK_PACKAGE_NAME})

add_subdirectory(libflunder)
add_subdirectory(libflunder-dev)

include (CPack)
